@@ -60,7 +60,14 @@ proc nsim_open { portnum } {
     # Close any existing nSim, then spawn a new one, saving its spawn_id and
     # portnum and setting the netport.
     nsim_close
-    spawn "$env(NSIM_HOME)/bin/nsim_gdb" :$portnum "-DLL=$env(NSIM_HOME)/lib/libsim.so" "-props=$env(ARC_NSIM_PROPS)" -reconnect
+    # nSIM outputs messages to std(out|err) as it accepts new connections. This
+    # output is ignored is by this script, however it seems that buffer that
+    # contains output at some points stops dropping old output to make a place
+    # for new one and simply overflows.  Thus sim_gdb cannot write to stream,
+    # it is blocked and it stops responding to TCP connection and Dejagnu is
+    # forced to restart it. I don't know a way to redirect nsim_gdb output to
+    # null from Expect, so we have to use a shell to help as here.
+    spawn sh -c "$env(NSIM_HOME)/bin/nsim_gdb :$portnum -DLL=$env(NSIM_HOME)/lib/libsim.so -props=$env(ARC_NSIM_PROPS) -reconnect >/dev/null 2>/dev/null"
     unset_board_info nsim_id
     set_board_info nsim_id $spawn_id
     unset_board_info nsim_port
